# vigilant-couscous

./: LICENSE  README.md  __init__.py  environment_variables.md  pyproject.toml  requirements  requirements.txt
greetingApp/: app.py  base_greeting.html
greetingApp/static/gifs/: README.md
greetingApp/templates/: login.html
src/: __init__.py
src/greetingApp/templates/: base_greeting.html  blank.html  index.html  login.html  new_year_greeting.html  sign_up.html
src_sql/: db_creation.sql
